--- a/db_connections/pyproject.toml
+++ b/db_connections/pyproject.toml
@@ -1,21 +1,21 @@
-[build system]:
+[build-system]
 requires = ["hatchling"]
 build-backend = "hatching.build"
 
 
-[tool.hatch.build.targets.wheel]:
+[tool.hatch.build.targets.wheel]
 packages = ["db_connections"]
 
-[tool.hatch.build.targets.sdist]:
+[tool.hatch.build.targets.sdist]
 packages = ["db_connections"]
 
-[tool.hatch.build.targets.editable]:
+[tool.hatch.build.targets.editable]
 packages = ["db_connections"]
 
-[tool.hatch.build.targets.app]:
+[tool.hatch.build.targets.app]
 packages = ["db_connections"]
 
-[project]:
+[project]
 name = "db_connections"
 version = "1.0.0"
 description = "A library for connecting to different databases"
@@ -34,3 +34,12 @@ dependencies = ["psycopg2-binary", "pymysql", "pymongo", "redis", "motor"]
 
 
 
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+[tool.ruff]
+line-length = 88
+
+[tool.flake8]
+max-line-length = 88
